k8s/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.14.1
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: server
              mountPath: /database.db
              subPath: filebrowser/filebrowser.db
            - name: server
              mountPath: /filebrowser.json
              subPath: filebrowser/filebrowser.json
            - name: server
              mountPath: /srv/server
            - name: data
              mountPath: /srv/data
            - name: media
              mountPath: /srv/media
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: media
          persistentVolumeClaim:
            claimName: media
