k8s/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
